--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 # API and Socket.io Server URLs  
-VITE_API_URL=https://poll-system-backend.vercel.app  
-VITE_SOCKET_URL=https://poll-system-backend.vercel.app 
+VITE_API_URL=https://poll-system-eight.vercel.app/
+VITE_SOCKET_URL=https://poll-system-eight.vercel.app/
